--- a/_posts/2014-08-19-hello2.markdown
+++ b/_posts/2014-08-19-hello2.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Hello world of programming"
+title:  "Markdown test"
 date:   2014-08-18 12:58:30
 categories: jekyll update
-excerpt: "This is my first post, and I am glad that I will share my time with you."
+excerpt: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat provident veritatis at doloribus a expedita maxime consectetur illum molestias accusamus, quis eveniet unde est quisquam voluptates perferendis cupiditate facere. Veritatis."
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias tenetur, voluptas dolor pariatur sunt voluptate, soluta quam laboriosam eligendi natus, porro nulla ipsam fugit repudiandae voluptates. Magni voluptate, exercitationem totam.
