--- a/_posts/2014-08-24-welcome.markdown
+++ b/_posts/2014-08-24-welcome.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Hello everybody"
+title:  "Hello everyone"
 date:   2014-08-24 20:56:00 +0200
 categories: general
 excerpt: "Hello everyone, welcome to my personal/blog web page. "
@@ -8,4 +8,3 @@ excerpt: "Hello everyone, welcome to my personal/blog web page. "
 
  Sometimes I will write in English (poor writing skills, sorry :( ), sometimes in Croatian. Most of my posts will be about little code helpers that will ease your workflow. 
 
- 
